        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.21 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.40.4-cfs1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
        removed cwd "./" (refer to Bugzilla 14399).

Severity   : enhancement
Bugzilla   : 14858
Description: Update to SLES10 SP1 latest kernel-2.6.16.54-0.2.5.

Severity   : enhancement
Bugzilla   : 14876
Description: Update to RHEL5 latest kernel-2.6.18-53.1.13.el5.

Severity   : normal
Frequency  : very rare
Bugzilla   : 3462
Description: Fix replay if there is an un-replied request and open
Details    : In some cases, older replay request will revert the
	     mcd->mcd_last_xid on MDS which is used to record the client's
	     latest sent request.

Severity   : enhancement
Bugzilla   : 14720
Description: Update to RHEL5 latest kernel-2.6.18-53.1.6.el5.

Severity   : enhancement
Bugzilla   : 14482
Description: Add rhel5 support to HEAD.

Serverity  : enhancement
Bugzilla   : 14793
Description: Update RHEL4 kernel to 2.6.9-67.0.4.

Severity   : minor
Frequency  : rare
Bugzilla   : 13196
Description: Don't allow skipping OSTs if index has been specified.
Details    : Don't allow skipping OSTs if index has been specified, make locking
	     in internal create lots better.

Severity   : normal
Bugzilla   : 12228
Description: LBUG in ptlrpc_check_set() bad phase ebc0de00
Details    : access to bitfield in structure is always rounded to long 
	     and this produce problem with not atomic change any bit.

Severity   : normal
Bugzilla   : 13647
Description: Lustre make rpms failed.
Details    : Remove ldiskfs spec file to avoids rpmbuild be confused when
	     builds Lustre rpms from tarball.

Severity   : normal
Frequency  : rare on shutdown ost
Bugzilla   : 14608
Description: If llog cancel was not send before clean_exports phase, this can