@@ -12,6 +12,15 @@ tbd  Sun Microsystems, Inc.
        * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
         removed cwd "./" (refer to Bugzilla 14399).
 
+Severity   : normal
+Frequency  : occasional
+Bugzilla   : 13730
+Description: Do not fail import if osc_interpret_create gets -EAGAIN
+Details    : If osc_interpret_create got -EAGAIN it immediately exits and 
+	     wakeup oscc_waitq.  After wakeup oscc_wait_for_objects call 
+	     oscc_has_objects and see OSC has no objests and call 
+	     oscc_internal_create to resend create request.
+
 Severity   : enhancement
 Bugzilla   : 14858
 Description: Update to SLES10 SP1 latest kernel-2.6.16.54-0.2.5.
